objects/LLC_BI__Professional_Contact__c.object
<CustomObject>
    <description>The Professional Contact Object stores information for contacts that are associated to loans/ relationships in professional ways, such as a lawyer, accountant, secretary, etc.</description>
    <fields>
        <fullName>LLC_BI__Address__c</fullName>
        <description>This field is used to specify the street address of the professional contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__City__c</fullName>
        <description>This field is used to specify the City of the professional contacts address.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Company__c</fullName>
        <description>This text field is used to specify the company associated to the professional contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Role__c</fullName>
        <description>This is a picklist field used to specify the role of the professional contact.</description>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant/CPA</fullName>
                    <default>true</default>
                    <label>Accountant/CPA</label>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Insurance Agent - Life</fullName>
                </value>
                <value>
                    <fullName>Insurance Agent - Property/Business</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
                <value>
                    <fullName>Referral Source</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
                <value>
                    <fullName>Title Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Email__c</fullName>
        <description>This field is used to store the email address of the professional contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is a master detail field that specifies the loan in which the professional contact is associated with.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Professional Contacts</relationshipLabel>
        <relationshipName>Professional_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mobile_Phone__c</fullName>
        <description>This field is used to specify the mobile phone number of the professional contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name__c</fullName>
        <description>This field is used to specify the name of the professional contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Phone__c</fullName>
        <description>this field is used to specify the Phone number of the professional contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Postal_Code__c</fullName>
        <description>This field is used to specify the postal code for the address of the professional contact.</description>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>This field is a picklist, used to specify the State for the address of the professional contact.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Professional Contact</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>